--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "type": "module",
   "license": "MIT",
-
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -12,7 +11,6 @@
     "check": "tsc --noEmit",
     "format": "prettier --write ."
   },
-
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -48,6 +46,7 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "framer-motion": "^12.23.22",
+    "i18next": "^25.7.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.1.5",
@@ -56,6 +55,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.64.0",
+    "react-i18next": "^16.5.1",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.2",
     "sonner": "^2.0.7",
@@ -66,7 +66,6 @@
     "wouter": "^3.3.5",
     "zod": "^4.1.12"
   },
-
   "devDependencies": {
     "@builder.io/vite-plugin-jsx-loc": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
